[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/public-pixel/PublicPixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/ui.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 27
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="ui" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 2 )

[node name="failed" type="CanvasLayer" parent="."]
layer = 2

[node name="ColorRect" type="ColorRect" parent="failed"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Panel" type="Panel" parent="failed/ColorRect"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -264.5
margin_right = 216.0
margin_bottom = 264.5
__meta__ = {
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="failed/ColorRect/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -143.5
margin_top = -171.5
margin_right = 143.5
margin_bottom = 171.5
custom_constants/separation = 40

[node name="restart" type="Button" parent="failed/ColorRect/Panel/VBoxContainer"]
margin_right = 287.0
margin_bottom = 151.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Restart"
flat = true

[node name="menu" type="Button" parent="failed/ColorRect/Panel/VBoxContainer"]
margin_top = 191.0
margin_right = 287.0
margin_bottom = 343.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Exit"
flat = true

[node name="Label" type="Label" parent="failed/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -243.0
margin_top = 161.0
margin_right = 243.0
margin_bottom = 221.0
custom_fonts/font = SubResource( 3 )
text = "You lose"

[node name="unlock" type="CanvasLayer" parent="."]
layer = 2

[node name="ColorRect" type="ColorRect" parent="unlock"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Panel" type="Panel" parent="unlock/ColorRect"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -264.5
margin_right = 216.0
margin_bottom = 264.5
__meta__ = {
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="unlock/ColorRect/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -143.5
margin_top = -171.5
margin_right = 143.5
margin_bottom = 171.5
custom_constants/separation = 40

[node name="continue" type="Button" parent="unlock/ColorRect/Panel/VBoxContainer"]
margin_right = 287.0
margin_bottom = 151.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Continue"
flat = true

[node name="menu" type="Button" parent="unlock/ColorRect/Panel/VBoxContainer"]
margin_top = 191.0
margin_right = 287.0
margin_bottom = 343.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Exit"
flat = true

[node name="Label" type="Label" parent="unlock/ColorRect/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -255.0
margin_right = 255.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "press right click"

[node name="Label" type="Label" parent="unlock/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -353.0
margin_top = 167.0
margin_right = 378.0
margin_bottom = 227.0
custom_fonts/font = SubResource( 3 )
text = "Unlock Melee"

[node name="pause" type="CanvasLayer" parent="."]
layer = 2

[node name="ColorRect" type="ColorRect" parent="pause"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Panel" type="Panel" parent="pause/ColorRect"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -264.5
margin_right = 216.0
margin_bottom = 264.5
__meta__ = {
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="pause/ColorRect/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -143.5
margin_top = -171.5
margin_right = 143.5
margin_bottom = 171.5
custom_constants/separation = 40

[node name="continue" type="Button" parent="pause/ColorRect/Panel/VBoxContainer"]
margin_right = 287.0
margin_bottom = 151.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Continue"
flat = true

[node name="menu" type="Button" parent="pause/ColorRect/Panel/VBoxContainer"]
margin_top = 191.0
margin_right = 287.0
margin_bottom = 343.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Exit"
flat = true

[node name="Label" type="Label" parent="pause/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -285.0
margin_top = 210.0
margin_right = 275.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 3 )
text = "Pause"
align = 1

[connection signal="pressed" from="failed/ColorRect/Panel/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="failed/ColorRect/Panel/VBoxContainer/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="unlock/ColorRect/Panel/VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="unlock/ColorRect/Panel/VBoxContainer/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="pause/ColorRect/Panel/VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="pause/ColorRect/Panel/VBoxContainer/menu" to="." method="_on_menu_pressed"]
